--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
