--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@lukemorales/query-key-factory": "^1.3.2",
     "@tanstack/react-query": "^4.33.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
