#53 feat: WindowContext 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
       "@styles/*": ["styles/*"],
       "@utils/*": ["utils/*"],
       "@hooks/*": ["hooks/*"],
+      "@context/*": ["context/*"],
       "@customTypes/*": ["customTypes/*"]
     }
   },
