--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@lukemorales/query-key-factory": "^1.3.2",
     "@tanstack/react-query": "^4.33.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7"
   },
