--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,6 @@
       "@customTypes/*": ["customTypes/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "__tests__"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
