--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.7.0",
     "msw": "^1.2.3",
     "prettier": "^3.0.2",
     "ts-jest": "^29.1.1",
