temp: Chat WS test

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.3.2",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^4.33.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
